@@ -1,147 +1,5 @@
-# jvm jdk7
-![jvm01.png](./images/jvm01.png)
-
-![jvm02.png](./images/jvm02.png)
-
->JVM内存结构主要有三大块：堆内存、方法区和栈。
-1. 堆内存由年轻代和老年代组成，年轻代内存又被分成三部分，Eden空间、From Survivor空间、To Survivor空间。年轻代默认分配比例8:1:1
-2. 方法区存储类信息、常量、静态变量等数据，是线程共享的区域，Non-Heap(非堆)
-3. 栈分为java虚拟机栈和本地方法栈，主要用于方法的执行
-
-> 控制参数
-- -Xms设置堆的最小空间大小。
-- -Xmx设置堆的最大空间大小。
-- -XX:NewSize设置新生代最小空间大小。
-- -XX:MaxNewSize设置新生代最大空间大小。
-- -XX:PermSize设置永久代最小空间大小。
-- -XX:MaxPermSize设置永久代最大空间大小。
-- -Xss设置每个线程的堆栈大小。
-> 老年代空间大小=堆空间大小-年轻代大空间大小
-
-
-### 一、Java堆(Heap)
-- 线程共享，整个Java虚拟机只有一个堆，所有的线程都访问同一个堆。而程序计数器、Java虚拟机栈、本地方法栈都是一个线程对应一个。
-- 在虚拟机启动时创建。
-- 是垃圾回收的主要场所。
-- 新生代(Eden区，From Survior和To Survivor)、老年代。
-
-### 二、方法区(Method Area)
-- 被虚拟机加载的类信息
-- 常量
-- 静态变量
-- 即时编译器编译后的代码
-
-> 特点
-- 线程共享
-- 持久代
-- 内存回收效率低
-- Java虚拟机规范对方法区的要求比较宽松
-
-### 三、程序计数器(Program Counter Register)
-- 是一块较小的内存空间。
-- 线程私有，每条线程都有自己的程序计数器。
-- 生命周期：随着线程的创建而创建，随着线程的结束而销毁。
-- 唯一一个不会出现OutOfMemoryError的内存区域。
-
-### 四、JVM栈(JVM Stacks)
-描述Java方法运行过程的内存模型。
-
-> 特点
-- 局部变量表随着栈帧的创建而创建，它的大小在编译时确定，创建时只需分配事先规定的大小即可。在方法运行过程中，局部变量表的大小不会发生改变。
-- Java虚拟机栈会出现两种异常：StackOverFlowError和OutOfMemoryError。
-- Java虚拟机栈是线程私有，随着线程创建而创建，随着线程的结束而销毁。
-
-### 五、本地方法栈(Native Method Stacks)
->本地方法栈是为JVM运行Native方法准备的空间，它与Java虚拟机栈实现的功能类似，只不过本地方法栈是描述本地方法运行过程的内存模型。
-
-
-# jvm jdk8
-![jvm03.png](images/jvm03.png)
-
-![jvm04.png](images/jvm04.png)
-
-> 元数据区内存不在JVM中，而是使用的本地内存，默认情况下受操作系统内存限制。调整元数据区内存大小的参数 -XX:MetaspaceSize -XX:MaxMetaspaceSize
-
-> -Xms和-Xmx用于设置堆内存的大小
-
-> -XX:NewSize和-XX:MaxNewSize用于设置年轻代的大小，建议设为整个堆大小的1/3或者1/4，两个值设为一样大。
-
-> -XX:SurvivorRatio用于设置Eden和其中一个Survivor的比值
-
-> -XX:NewRatio=3代表新生代和老年代的比例为1:3
-
-# gc
-![jvm05.png](images/jvm05.png)
-
-### 一、GC主要分新生代GC和老年代GC
-1. 新生代GC：串行GC、并行GC、并行回收GC
-2. 老年代GC：串行GC、并行GC、CMS    
-3. G1比较特殊，同时支持新生代和老年代
-
-### 二、选择GC主要关注两点，吞吐量优先和暂停时间优先，
-1. 吞吐量优先  
-采用server默认的并行GC(Parallel GC)方式(蓝色区域)
-2. 暂停时间优先  
-选用并发GC(CMS)方式(黄色区域)，常用场景：互联网、电商类
-
-### 三、常用GC开启方式
-```text
-1. 暂停时间优先: 并行GC+CMS
-开启方式[ -XX:+UseConcMarkSweepGC -XX:+UseParNewGC ]
-
-2. 吞吐量优先: 并行回收GC + 并行GC
-开启方式 [ -XX:+UseParallelOldGC ]，server模式默认的配置
-
-3. G1: [ -XX:+UseG1GC ]
-适用于服务器端、大内存、多CPU情景的垃圾收集器
-G1的目标是在维持高效率回收的同时，提供软实时中断特性
-常用场景：hadoop、elasticsearch
-```
-
-### 四、CMS
-1. CMS(Concurrent Mark Sweep)收集器是一种以获取最短回收停顿时间为目标的收集器
-2. CMS垃圾回收步骤
-- 初始标记（CMS initial mark）
-- 并发标记（CMS concurrent mark）
-- 重新标记（CMS remark）
-- 并发清除（CMS concurrent sweep）
-
-3. 优缺点
-优点: 并发收集、低停顿
-缺点: 产生大量空间碎片、并发阶段会降低吞吐量
-
-4. 参数控制：
-- -XX:+UseConcMarkSweepGC 使用CMS收集器
-- -XX:+UseCMSCompactAtFullCollection Full GC后，进行一次碎片整理；整理过程是独占的，会引起停顿时间变长
-- -XX:+CMSFullGCsBeforeCompaction 设置进行几次Full GC后，进行一次碎片整理
-- -XX:ParallelCMSThreads 设定CMS的线程数量（一般情况约等于可用CPU数量）
-
-### 五、G1
-1. 特点
-- 空间整合
-- 可预测停顿
-
-2. G1垃圾回收步骤
-    1. 标记阶段，首先初始标记(Initial-Mark),这个阶段是停顿的(Stop the World Event)，并且会触发一次普通Mintor GC。对应GC log:GC pause (young) (inital-mark)
-    2. Root Region Scanning，程序运行过程中会回收survivor区(存活到老年代)，这一过程必须在young GC之前完成。
-    3. Concurrent Marking，在整个堆中进行并发标记(和应用程序并发执行)，此过程可能被young GC中断。在并发标记阶段，若发现区域对象中的所有对象都是垃圾，那个这个区域会被立即回收(图中打X)。同时，并发标记过程中，会计算每个区域的对象活性(区域中存活对象的比例)。
-    4. Remark, 再标记，会有短暂停顿(STW)。再标记阶段是用来收集 并发标记阶段 产生新的垃圾(并发阶段和应用程序一同运行)；G1中采用了比CMS更快的初始快照算法:snapshot-at-the-beginning (SATB)。
-    5. Copy/Clean up，多线程清除失活对象，会有STW。G1将回收区域的存活对象拷贝到新区域，清除Remember Sets，并发清空回收区域并把它返回到空闲区域链表中。
-    6. 复制/清除过程后。回收区域的活性对象已经被集中回收到深蓝色和深绿色区域。
-
-### 六、CMS和G1区别
-```text
-CMS堆 -> 年轻代老年代
-G1堆 -> 多个区 -> 每个区里(年轻代老年代)
-Cms 标记清理算法
-
-G1 压缩复制算法，不产生碎片
-G1 时间停顿可设置，相关参数[ -XX:MaxGCPauseMillis=100 -XX:GCPauseIntervalMillis=200 ]
-```
-
-# jvm调优
-### command(jdk1.8)
-> JPS
+# jvm调优工具
+> jps
 ```text
 JVM Process Status Tool，显示指定系统内所有的HotSpot虚拟机进程
 jps [options] [hostid]
@@ -154,12 +12,15 @@ options:
 
 example:
 $ jps -ml
-17552
-17649 org.jetbrains.jps.cmdline.Launcher /Applications/IntelliJ IDEA.app/Contents/lib/lz4-java-1.3.jar:/Applications/IntelliJ IDEA.app/Contents/lib/javac2.jar:/Applications/IntelliJ IDEA.app/Contents/lib/jgoodies-forms.jar:/Applications/IntelliJ IDEA.app/Contents/lib/asm-all.jar:/Applications/IntelliJ IDEA.app/Contents/lib/commons-codec-1.9.jar:/Applications/IntelliJ IDEA.app/Contents/lib/guava-21.0.jar:/Applications/IntelliJ IDEA.app/Contents/lib/httpcore-4.4.5.jar:/Applications/IntelliJ IDEA.app/Contents/lib/jna-platform.jar:/Applications/IntelliJ IDEA.app/Contents/lib/oro-2.0.8.jar:/Applications/IntelliJ IDEA.app/Contents/lib/jps-model.jar:/Applications/IntelliJ IDEA.app/Contents/lib/util.jar:/Applications/IntelliJ IDEA.app/Contents/lib/platform-api.jar:/Applications/IntelliJ IDEA.app/Contents/lib/slf4j-api-1.7.10.jar:/Applications/IntelliJ IDEA.app/Contents/lib/aether-1.1.0-all.jar:/Applications/IntelliJ IDEA.app/Contents/lib/snappy-in-java-0.5.1.jar:/Applications/IntelliJ IDEA.app/Contents/lib/jna.jar:/Applica
-17638 org.jetbrains.plugins.scala.nailgun.NailgunRunner 3200 c2d8d43a-3d99-40cf-9147-2a08705604c6
-15961
-19244 sun.tools.jps.Jps -ml
+1056 org.apache.zookeeper.server.quorum.QuorumPeerMain /Users/dongzai1005/soft/zookeeper-3.4.13/bin/../conf/zoo.cfg
+2384 org.apache.hadoop.hdfs.server.namenode.SecondaryNameNode
+3588
+2277 org.apache.hadoop.hdfs.server.datanode.DataNode
+3655 org.jetbrains.idea.maven.server.RemoteMavenServer
+2186 org.apache.hadoop.hdfs.server.namenode.NameNode
+3884 sun.tools.jps.Jps -ml
 ```
+
 > jstat
 ```text
 jstat(JVM statistics Monitoring)是用于监视虚拟机运行时状态信息的命令，它可以显示出虚拟机进程中的类装载、内存、垃圾收集、JIT编译等运行数据。
@@ -202,7 +63,7 @@ $ jstat -options
 
 example:
 类加载统计
-$ jstat -class 17649
+$ jstat -class 1056
 Loaded  Bytes  Unloaded  Bytes     Time
   3386  6459.8        0     0.0       1.07
   
@@ -213,7 +74,7 @@ Bytes:未加载占用空间
 Time：时间
 
 编译统计
-$ jstat -compiler 17649
+$ jstat -compiler 1056
 Compiled Failed Invalid   Time   FailedType FailedMethod
     1626      1       0     2.93          1 java/net/URL <init>
 Compiled：编译数量。
@@ -224,16 +85,16 @@ FailedType：失败类型
 FailedMethod：失败的方法
 
 垃圾回收统计
-$ jstat -gc 17649
+$ jstat -gc 1056
  S0C    S1C    S0U    S1U      EC       EU        OC         OU       MC     MU    CCSC   CCSU   YGC     YGCT    FGC    FGCT     GCT
 5120.0 5120.0  0.0   5088.1 33280.0  19947.2   87552.0     2973.9   19456.0 18986.5 2304.0 2142.8      3    0.017   0      0.000    0.017
 
-S0C：第一个幸存区的大小
-S1C：第二个幸存区的大小
-S0U：第一个幸存区的使用大小
-S1U：第二个幸存区的使用大小
-EC：伊甸园区的大小
-EU：伊甸园区的使用大小
+S0C：survivor0的内存大小
+S1C：survivor1的内存大小
+S0U：survivor0的内存使用大小
+S1U：survivor1的内存使用大小
+EC：eden区的大小
+EU：eden区的使用大小
 OC：老年代大小
 OU：老年代使用大小
 MC：方法区大小
@@ -247,16 +108,16 @@ FGCT：老年代垃圾回收消耗时间
 GCT：垃圾回收消耗总时间
 
 堆内存统计
-$ jstat -gccapacity 17649
+$ jstat -gccapacity 1056
  NGCMN    NGCMX     NGC     S0C   S1C       EC      OGCMN      OGCMX       OGC         OC       MCMN     MCMX      MC     CCSMN    CCSMX     CCSC    YGC    FGC
  43520.0 238592.0  76800.0 5120.0 5120.0  33280.0    87552.0   478208.0    87552.0    87552.0      0.0 1067008.0  19456.0      0.0 1048576.0   2304.0      3     0
 
 NGCMN：新生代最小容量
 NGCMX：新生代最大容量
 NGC：当前新生代容量
-S0C：第一个幸存区大小
-S1C：第二个幸存区的大小
-EC：伊甸园区的大小
+S0C：survivor0的内存大小
+S1C：survivor1的内存大小
+EC：eden区的大小
 OGCMN：老年代最小容量
 OGCMX：老年代最大容量
 OGC：当前老年代大小
@@ -271,40 +132,40 @@ YGC：年轻代gc次数
 FGC：老年代GC次数
 
 新生代垃圾回收统计
-$ jstat -gcnew 17649
+$ jstat -gcnew 1056
  S0C    S1C    S0U    S1U   TT MTT  DSS      EC       EU     YGC     YGCT
 5120.0 5120.0    0.0 5088.1  7  15 5120.0  33280.0  19947.2      3    0.017
 
-S0C：第一个幸存区大小
-S1C：第二个幸存区的大小
-S0U：第一个幸存区的使用大小
-S1U：第二个幸存区的使用大小
+S0C：survivor0的内存大小
+S1C：survivor1的内存大小
+S0U：survivor0的内存使用大小
+S1U：survivor1的内存使用大小
 TT:对象在新生代存活的次数
 MTT:对象在新生代存活的最大次数
 DSS:期望的幸存区大小
-EC：伊甸园区的大小
-EU：伊甸园区的使用大小
+EC：eden区的内存大小
+EU：eden区的内存使用大小
 YGC：年轻代垃圾回收次数
 YGCT：年轻代垃圾回收消耗时间
 
-$ jstat -gcnewcapacity 17649
+$ jstat -gcnewcapacity 1056
   NGCMN      NGCMX       NGC      S0CMX     S0C     S1CMX     S1C       ECMX        EC      YGC   FGC
    43520.0   238592.0    76800.0  79360.0   5120.0  79360.0   5120.0   237568.0    33280.0     3     0
 
 NGCMN：新生代最小容量
 NGCMX：新生代最大容量
 NGC：当前新生代容量
-S0CMX：最大幸存1区大小
-S0C：当前幸存1区大小
-S1CMX：最大幸存2区大小
-S1C：当前幸存2区大小
-ECMX：最大伊甸园区大小
-EC：当前伊甸园区大小
+S0CMX：最大survivor0内存大小
+S0C：survivor0的内存大小
+S1CMX：最大survivor1内存大小
+S1C：survivor1的内存大小
+ECMX：最大eden区大小
+EC：当前eden区大小
 YGC：年轻代垃圾回收次数
 FGC：老年代回收次数
 
 老年代垃圾回收统计
-$ jstat -gcold 17649
+$ jstat -gcold 1056
    MC       MU      CCSC     CCSU       OC          OU       YGC    FGC    FGCT     GCT
  19456.0  18986.5   2304.0   2142.8     87552.0      2973.9      3     0    0.000    0.017
 
@@ -320,7 +181,7 @@ FGCT：老年代垃圾回收消耗时间
 GCT：垃圾回收消耗总时间
 
 老年代内存统计
-$ jstat -gcoldcapacity 17649
+$ jstat -gcoldcapacity 1056
    OGCMN       OGCMX        OGC         OC       YGC   FGC    FGCT     GCT
     87552.0    478208.0     87552.0     87552.0     3     0    0.000    0.017
 
@@ -334,7 +195,7 @@ FGCT：老年代垃圾回收消耗时间
 GCT：垃圾回收消耗总时间
 
 元数据空间统计
-$ jstat -gcmetacapacity 17649
+$ jstat -gcmetacapacity 1056
    MCMN       MCMX        MC       CCSMN      CCSMX       CCSC     YGC   FGC    FGCT     GCT
        0.0  1067008.0    19456.0        0.0  1048576.0     2304.0     3     0    0.000    0.017
 
@@ -351,12 +212,12 @@ GCT：垃圾回收消耗总时间
 
 
 总结垃圾回收统计
-$ jstat -gcutil 17649
+$ jstat -gcutil 1056
   S0     S1     E      O      M     CCS    YGC     YGCT    FGC    FGCT     GCT
   0.00  99.38  59.94   3.40  97.59  93.00      3    0.017     0    0.000    0.017
-S0：幸存1区当前使用比例
-S1：幸存2区当前使用比例
-E：伊甸园区使用比例
+S0：survivor0区当前使用比例
+S1：survivor1区当前使用比例
+E：eden区使用比例
 O：老年代使用比例
 M：元数据区使用比例
 CCS：压缩使用比例
@@ -367,7 +228,7 @@ GCT：垃圾回收消耗总时间
 
 
 JVM编译方法统计
-$ jstat -printcompilation 17649
+$ jstat -printcompilation 1056
 Compiled  Size  Type Method
     1626    896    1 io/netty/channel/nio/NioEventLoop select
 
@@ -377,6 +238,7 @@ Type：最近编译方法的编译类型。
 Method：方法名标识。
 ```
 
+> jmap
 ```text
 jmap(JVM Memory Map)命令用于生成heap dump文件，如果不使用这个命令，还阔以使用-XX:+HeapDumpOnOutOfMemoryError参数来让虚拟机出现OOM的时候·自动生成dump文件。 jmap不仅能生成dump文件，还阔以查询finalize执行队列、Java堆和永久代的详细信息，如当前使用率、当前使用的是哪种收集器等。
 
@@ -409,13 +271,13 @@ where <option> is one of:
                          in this mode.
     -h | -help           to print this help message
     -J<flag>             to pass <flag> directly to the runtime system
-    
-dump : 生成堆转储快照
-finalizerinfo : 显示在F-Queue队列等待Finalizer线程执行finalizer方法的对象
-heap : 显示Java堆详细信息
-histo : 显示堆中对象的统计信息
-permstat : to print permanent generation statistics
-F : 当-dump没有响应时，强制生成dump快照
+
+dump: 生成堆转储快照
+finalizerinfo: 显示在F-Queue队列等待Finalizer线程执行finalizer方法的对象
+heap: 显示Java堆详细信息
+histo: 显示堆中对象的统计信息
+permstat: to print permanent generation statistics
+F: 当-dump没有响应时，强制生成dump快照
 
 1、jmap -histo[:live] <pid>
 通过histo选项，打印当前java堆中各个对象的数量、大小。
@@ -425,16 +287,21 @@ F : 当-dump没有响应时，强制生成dump快照
 通过-dump选项，把java堆中的对象dump到本地文件，然后使用MAT进行分析。
 如果添加了live，只会dump活跃的对象。
 
-3、jmap -heap <pid>
+3、jmap -heap <pid>(root用户执行)
 通过-heap选项，打印java堆的配置情况和使用情况，还有使用的GC算法。
 
-4、jmap -finalizerinfo <pid>
+4、jmap -finalizerinfo <pid>(root用户执行)
 通过-finalizerinfo选项，打印那些正在等待执行finalize方法的对象。
 
 5、jmap -permstat <pid>
 通过-permstat选项，打印java堆永久代的信息，包括class loader相关的信息,和interned Strings的信息。    
+
+example:
+$ jmap -dump:live,file=dump.dat 1056
+
 ```
 
+> jhat
 ```text
 jhat(JVM Heap Analysis Tool)命令是与jmap搭配使用，用来分析jmap生成的dump，jhat内置了一个微型的HTTP/HTML服务器，生成dump的分析结果后，可以在浏览器中查看。在此要注意，一般不会直接在服务器上进行分析，因为jhat是一个耗时并且耗费硬件资源的过程，一般把服务器生成的dump文件复制到本地或其他机器上进行分析。
 
@@ -473,10 +340,16 @@ All boolean options default to "true"
 -baseline exclude-file 指定一个基准堆转储(baseline heap dump)。 在两个 heap dumps 中有相同 object ID 的对象会被标记为不是新的(marked as not being new). 其他对象被标记为新的(new). 在比较两个不同的堆转储时很有用.>
 -debug int 设置 debug 级别. 0 表示不输出调试信息。 值越大则表示输出更详细的 debug 信息.>
 -version 启动后只显示版本信息就退出>
--J<flag> 因为 jhat 命令实际上会启动一个JVM来执行, 通过 -J 可以在启动JVM时传入一些启动参数. 例如, -J-Xmx512m 则指定运行 jhat 的Java虚拟机使用的最大堆内存为 512 MB. 如果需要使用多个JVM启动参数,则传入多个 -Jxxxxxx.
+-J<flag> 因为jhat命令实际上会启动一个JVM来执行, 通过 -J 可以在启动JVM时传入一些启动参数. 例如, -J-Xmx512m 则指定运行 jhat 的Java虚拟机使用的最大堆内存为 512 MB. 如果需要使用多个JVM启动参数,则传入多个 -Jxxxxxx.
+
+example:
+$ jhat dump.dat
+
+web ui:
+http://localhost:7000/
 ```
 
-
+> jstack
 ```text
 jstack用于生成java虚拟机当前时刻的线程快照。线程快照是当前java虚拟机内每一条线程正在执行的方法堆栈的集合，生成线程快照的主要目的是定位线程出现长时间停顿的原因，如线程间死锁、死循环、请求外部资源导致的长时间等待等。 线程出现停顿的时候通过jstack来查看各个线程的调用堆栈，就可以知道没有响应的线程到底在后台做什么事情，或者等待什么资源。 如果java程序崩溃生成core文件，jstack工具可以用来获得core文件的java stack和native stack的信息，从而可以轻松地知道java程序是如何崩溃和在程序何处发生问题。另外，jstack工具还可以附属到正在运行的java程序中，看到当时运行的java程序的java stack和native stack的信息, 如果现在运行的java程序呈现hung的状态，jstack是非常有用的。
 
@@ -499,11 +372,54 @@ Options:
     
 -F : 当正常输出请求不被响应时，强制输出线程堆栈
 -l : 除堆栈外，显示关于锁的附加信息
--m : 如果调用到本地方法的话，可以显示C/C++的堆栈    
+-m : 如果调用到本地方法的话，可以显示C/C++的堆栈
+
+
+$ printf '%x\n' 1056
+1b3b
+
+$ jstack 1056 | grep 1b3b -A 20
+
+$ jstack 1056
+2019-01-12 10:40:04
+Full thread dump Java HotSpot(TM) 64-Bit Server VM (25.172-b11 mixed mode):
+
+"Attach Listener" #46 daemon prio=9 os_prio=31 tid=0x00007fe688ca4000 nid=0xe0b runnable [0x0000000000000000]
+   java.lang.Thread.State: RUNNABLE
+
+"DestroyJavaVM" #45 prio=5 os_prio=31 tid=0x00007fe68a06b000 nid=0x2703 waiting on condition [0x0000000000000000]
+   java.lang.Thread.State: RUNNABLE
+
+"http-nio-8000-AsyncTimeout" #43 daemon prio=5 os_prio=31 tid=0x00007fe68a60a800 nid=0x6703 waiting on condition [0x000070000a209000]
+   java.lang.Thread.State: TIMED_WAITING (sleeping)
+	at java.lang.Thread.sleep(Native Method)
+	at org.apache.coyote.AbstractProtocol$AsyncTimeout.run(AbstractProtocol.java:1149)
+	at java.lang.Thread.run(Thread.java:748)
+
+"http-nio-8000-Acceptor-0" #42 daemon prio=5 os_prio=31 tid=0x00007fe68648d800 nid=0x8e03 runnable [0x000070000a106000]
+   java.lang.Thread.State: RUNNABLE
+	at sun.nio.ch.ServerSocketChannelImpl.accept0(Native Method)
+	at sun.nio.ch.ServerSocketChannelImpl.accept(ServerSocketChannelImpl.java:422)
+	at sun.nio.ch.ServerSocketChannelImpl.accept(ServerSocketChannelImpl.java:250)
+	- locked <0x00000007be06e350> (a java.lang.Object)
+	at org.apache.tomcat.util.net.NioEndpoint$Acceptor.run(NioEndpoint.java:482)
+	at java.lang.Thread.run(Thread.java:748)
+
+"http-nio-8000-ClientPoller-1" #41 daemon prio=5 os_prio=31 tid=0x00007fe6860bd000 nid=0x6403 runnable [0x000070000a003000]
+   java.lang.Thread.State: RUNNABLE
+	at sun.nio.ch.KQueueArrayWrapper.kevent0(Native Method)
+	at sun.nio.ch.KQueueArrayWrapper.poll(KQueueArrayWrapper.java:198)
+	at sun.nio.ch.KQueueSelectorImpl.doSelect(KQueueSelectorImpl.java:117)
+	at sun.nio.ch.SelectorImpl.lockAndDoSelect(SelectorImpl.java:86)
+	- locked <0x0000000795f0d1a0> (a sun.nio.ch.Util$3)
+	- locked <0x0000000795f0d190> (a java.util.Collections$UnmodifiableSet)
+	- locked <0x0000000795f0d070> (a sun.nio.ch.KQueueSelectorImpl)
+	at sun.nio.ch.SelectorImpl.select(SelectorImpl.java:97)
+	at org.apache.tomcat.util.net.NioEndpoint$Poller.run(NioEndpoint.java:825)
+	at java.lang.Thread.run(Thread.java:748)
 ```
 
-
-
+> jinfo
 ```text
 jinfo(JVM Configuration info)这个命令作用是实时查看和调整虚拟机运行参数。 之前的jps -v口令只能查看到显示指定的参数，如果想要查看未被显示指定的参数的值就要使用jinfo口令
 
@@ -525,7 +441,29 @@ where <option> is one of:
     <no option>          to print both of the above
     -h | -help           to print this help message
 
--flag : 输出指定args参数的值
--flags : 不需要args参数，输出所有JVM参数的值
--sysprops : 输出系统属性，等同于System.getProperties()
+-flag: 输出指定args参数的值
+-flags: 不需要args参数，输出所有JVM参数的值
+-sysprops: 输出系统属性，等同于System.getProperties()
 ```
+
+# 常用配置
+> 打印GC日志
+
+-XX:+PrintGCTimeStamps -XX:+PrintGCDateStamps -XX:+PrintGCDetails -Xloggc:<filename>
+
+> -Xmx2048m -Xms2048m -Xmn1g -Xss512k -XX:SurvivorRatio=8 -XX:+UseParallelGC -XX:MaxTenuringThreshold=4 -XX:ParallelGCThreads=43
+```text
+-Xmx2048m 最大堆内存2G（之前默认是1G）
+-Xms2048m 初始堆内存（建议跟-Xmx设置成一样，避免gc后调整）
+-Xmn1g  年轻代内存1G
+-Xss512k 每个栈大小为512K（设置小点，可以创建更多的线程，设置太小 会栈溢出）
+-XX:SurvivorRatio=8  算法(s0+s1)/eden=2:8，即s0=s1=1/10 * 1G=102.4M
+-XX:+UseParallelGC 开启并行gc（我们是后端服务，需要大吞吐量）
+-XX:MaxTenuringThreshold=4  年轻代对象年龄为4
+-XX:ParallelGCThreads  gc线程数，此值最好配置与处理器数目相等
+```
+
+
+# 问题
+1. Error attaching to process: sun.jvm.hotspot.debugger.DebuggerException：不允许的操作
+> $ echo 0 | sudo tee /proc/sys/kernel/yama/ptrace_scope
